{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 17,
  "lineage": "b0271ce1-d517-2aca-2f7a-95aff71eae50",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_ins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ab4d1e9cf9a1215a",
            "arn": "arn:aws:ec2:us-east-1:875503319718:instance/i-0387c4f7db1dfd6c7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0387c4f7db1dfd6c7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cali",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0390046a79bad3e5e",
            "private_dns": "ip-10-0-0-11.ec2.internal",
            "private_ip": "10.0.0.11",
            "public_ip": "3.235.93.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04e37c46b2f08d532",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013b28120866252de",
            "tags": {
              "Name": "test_ins"
            },
            "tags_all": {
              "Name": "test_ins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05c8714c622f4332a"
            ]
          },
          "dependencies": [
            "aws_subnet.test_sn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875503319718:internet-gateway/igw-06f5ddc5cf0f7b0cc",
            "id": "igw-06f5ddc5cf0f7b0cc",
            "owner_id": "875503319718",
            "tags": {
              "Name": "test_igw"
            },
            "tags_all": {
              "Name": "test_igw"
            },
            "vpc_id": "vpc-010a6b86707c9ad5f"
          },
          "dependencies": [
            "aws_vpc.devOps_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875503319718:route-table/rtb-0b27bb76c475f5545",
            "id": "rtb-0b27bb76c475f5545",
            "owner_id": "875503319718",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f5ddc5cf0f7b0cc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test_RT"
            },
            "tags_all": {
              "Name": "test_RT"
            },
            "vpc_id": "vpc-010a6b86707c9ad5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devOps_terraform_vpc",
            "aws_internet_gateway.test_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019c12daef5bc87ed",
            "route_table_id": "rtb-0b27bb76c475f5545",
            "subnet_id": "subnet-013b28120866252de"
          },
          "dependencies": [
            "aws_vpc.devOps_terraform_vpc",
            "aws_internet_gateway.test_igw",
            "aws_route_table.test_RT",
            "aws_subnet.test_sn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875503319718:security-group/sg-054a08dcee69b144d",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-054a08dcee69b144d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "875503319718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test_sg"
            },
            "tags_all": {
              "Name": "test_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-010a6b86707c9ad5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devOps_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875503319718:subnet/subnet-013b28120866252de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/28",
            "id": "subnet-013b28120866252de",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "875503319718",
            "tags": {
              "Name": "test_sn"
            },
            "tags_all": {
              "Name": "test_sn"
            },
            "vpc_id": "vpc-010a6b86707c9ad5f"
          },
          "dependencies": [
            "aws_vpc.devOps_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devOps_terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875503319718:vpc/vpc-010a6b86707c9ad5f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/26",
            "default_network_acl_id": "acl-0d947b88aa722f284",
            "default_route_table_id": "rtb-001277c11db2f4d26",
            "default_security_group_id": "sg-05c8714c622f4332a",
            "dhcp_options_id": "dopt-08734972",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-010a6b86707c9ad5f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-001277c11db2f4d26",
            "owner_id": "875503319718",
            "tags": {
              "Name": "devOps_terraform_vpc"
            },
            "tags_all": {
              "Name": "devOps_terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}